# xfichecker-experimental

./: README.md
xfiler/: CMakeLists.txt  CMakePresets.json  xfichecker.cpp
xfiler/CliUI/: cli.cpp  cli.h
xfiler/core/: xfiler.cpp  xfiler.h
xfiler/modules/: xfilerrorhandler.h
